--- a/PiGu_JS_Sim.Rmd
+++ b/PiGu_JS_Sim.Rmd
@@ -1,23 +1,14 @@
 
 ```{r packages, include=FALSE}
-library(tidyr)
 library(data.table)
-library(ggfortify)
-library(broom) #tidy() augment()
-library(dplyr)
 library(ggplot2)
-#library(cowplot)
-library(lme4)
-#library(rstudioapi)
-#library(lmerTest)
-#library(scales)
 library(reshape2)
 library(stats) 
 library(zoo)
-#library(sciplot)
 library(jagsUI)
 library(R2OpenBUGS)
-library(chron)
+library(tidyr)
+library(dplyr)
 
 ```
 
@@ -25,264 +16,372 @@ library(chron)
 ```{r model}
 
 model_MEJS <- function () {
-
-# Priors and constraints
-for (i in 1:M) {
-  for (t in 1:(n.occasions-1)){
-        logit(phiA[i,t]) <- mu.phi[1] #+ b.egg.y[year_i[i]] 
-        logit(phiB[i,t]) <- mu.phi[2] #+ b.chick.y[year_i[i]] 
-    gamma[i,t] <- mean.gam    # Prior for entry probabilities at occasion t
-    pA[i,t] <- mean.p[1]     # egg burrow detection
-    pB[i,t] <- mean.p[2]     # chick burrow detection
-    psiAB[i,t] <- mean.psiAB
-  } #t
-} #i
-
-b ~ dunif(0,1)            # prior for assignment probability
-mean.psiAB ~ dunif(0,1)   # transition from egg to chick
-mean.gam ~ dunif(0,1)
-pi ~ ddirch(alpha[1:3])   #dirichlet prior for multinomial
-alpha[1] <- 1/3
-alpha[2] <- 1/3
-alpha[3] <- 1/3
-
-for (u in 1:2){
- mu.phi[u] ~ dnorm(0, 0.001) 
- #mean.phi[u] ~ dunif(0, 1)    # Priors for mean state-spec. survival
- mean.p[u] ~ dunif(0, 1)      # Priors for mean state-spec. recapture
- #mean.p[u] ~ dunif(0.3, 1)      # Priors for mean state-spec. recapture
-
-}
-
-  b.chick.y[1] <- 0
-  b.egg.y[1] <- 0
-# for (y in 2:nyear) {
-#   b.chick.y[y] ~ dnorm(0, 0.001)
-#   b.egg.y[y] ~ dnorm(0, 0.001)
-# }
-
-phiA.int <- 1 / (1+exp(-mu.phi[1]))
-phiB.int <- 1 / (1+exp(-mu.phi[2]))
-
-# Likelihood 
-for (i in 1:M){
- # Define latent state at first occasion
-  z[i,1] ~ dcat(pi[1:3])      #all M individuals have probability of being in 1 of 3 states
-  #y[i,1] ~ dcat(po[z[i,1], i, 1, 1:3])  #covered below
   
- for (t in 2:n.occasions){
-  # State process: draw S(t) given S(t-1); daily
-  z[i,t] ~ dcat(ps[z[i,t-1], i, t-1, 1:4])
- } #t
-   
-  # Observation process: draw O(t) given S(t); n_visit approach via Nathan
-  for (k in 1:visits_i[i]) {  
-  y[i,k] ~ dcat(po[z[i,effort[i,k]], i, k, 1:3]) 
-  } #k
-} #i
-
-# Define transition and observation matrices
- for (i in 1:M){
-  for (t in 1:(n.occasions-1)) {
+  # Priors and constraints
+  for (i in 1:M) { 
+    for (t in 1:(n.occasions-1)){ 
+      logit(phiA[i,t]) <- mu.phi[1] #+ b.egg.y[year_i[i]] 
+      logit(phiB[i,t]) <- mu.phi[2] #+ b.chick.y[year_i[i]] 
+      gamma[i,t] <- mean.gamma    # Prior for entry probabilities at occasion t
+      pA[i,t] <- mean.p[1]     # egg burrow detection
+      pB[i,t] <- mean.p[2]     # chick burrow detection, only need 1:14
+      psiAB[i,t] <- mean.psiAB  #egg to chick
+    } #t
+  } #i
+  
+  b ~ dunif(0,1)            # prior for assignment probability
+  mean.psiAB ~ dunif(0,1)   # transition from egg to chick
+  mean.gamma ~ dunif(0,1)
+  pi ~ ddirch(alpha[1:3])   #dirichlet prior for multinomial
+  alpha[1] <- 1/3
+  alpha[2] <- 1/3
+  alpha[3] <- 1/3
+  
+  for (u in 1:2){
+    mu.phi[u] ~ dnorm(0, 0.001)    # mean state-spec. survival
+    mean.p[u] ~ dunif(0, 1)      # mean state-spec. detection
+  }
+  
+  #params and priors for a fixed year effect on phi
+  # for (y in 2:nyear) {
+  #   b.chick.y[y] ~ dnorm(0, 0.001)
+  #   b.egg.y[y] ~ dnorm(0, 0.001)
+  # }
+  # b.chick.y[1] <- 0
+  # b.egg.y[1] <- 0
+  
+  phiA.int <- 1/(1+exp(-mu.phi[1]))  #plogis() back to probability scale
+  phiB.int <- 1/(1+exp(-mu.phi[2]))
+  
+  # Likelihood 
+  for (i in 1:M){
+    # Define latent state at first occasion
+    z[i,1] ~ dcat(pi[1:3])      #all M individuals have probability of being in 1 of 3 states at first occ
+    # y[i,1] ~ dcat(po[z[i,1], i, 1, 1:3])  #covered below
+    
+    for (t in 2:n.occasions){
+      # State process: draw S(t) given S(t-1); daily
+      z[i,t] ~ dcat(ps[z[i,t-1], i, t-1, 1:4])
+    } #t
+    
+    # Observation process: draw O(t) given S(t); n_visit approach via Nathan
+    for (k in 1:visits_i[i]) {  
+      y[i,survey_day[i,k]] ~ dcat(po[z[i,survey_day[i,k]], i, k, 1:3]) 
+    } #k
+  } #i
+  
+  # Define transition and observation matrices
+  for (i in 1:M){
+    for (t in 1:(n.occasions-1)) {
       # Define probabilities of state S(t+1) given S(t)   
-      ps[1,i,t,1] <- 1-gamma[i,t]                    #probability of not entering
-      ps[1,i,t,2] <- gamma[i,t]                    #probability of entering as egg
-      ps[1,i,t,3] <- 0                          #can't enter as a chick after day 1
-      ps[1,i,t,4] <- 0                             #probability of entering as terminated
-      ps[2,i,t,1] <- 0                             #probability egg goes to 'not entered'
-      ps[2,i,t,2] <- (1-psiAB[i,t])*phiA[i,t]          #probability of surviving egg state and not transitioning
-      ps[2,i,t,3] <- phiA[i,t]*psiAB[i,t]              #probability of surviving egg state and hatching
-      ps[2,i,t,4] <- 1-phiA[i,t]                      #probability of a failed egg
-      ps[3,i,t,1] <- 0                                #probability chick goes to 'not entered'
-      ps[3,i,t,2] <- 0                                #probability chick goes to egg
+      ps[1,i,t,1] <- 1-gamma[i,t]              #probability of not entering
+      ps[1,i,t,2] <- gamma[i,t]                #probability of entering as egg
+      ps[1,i,t,3] <- 0                         #can't enter as a chick after day 1
+      ps[1,i,t,4] <- 0                         #probability of entering as terminated
+      ps[2,i,t,1] <- 0                         #probability egg goes to 'not entered'
+      ps[2,i,t,2] <- (1-psiAB[i,t])*phiA[i,t]  #probability of surviving egg state and not transitioning
+      ps[2,i,t,3] <- phiA[i,t]*psiAB[i,t]          #probability of surviving egg state and hatching
+      ps[2,i,t,4] <- 1-phiA[i,t]                   #probability of a failed egg
+      ps[3,i,t,1] <- 0                             #probability chick goes to 'not entered'
+      ps[3,i,t,2] <- 0                             #probability chick goes to egg
       ps[3,i,t,3] <- phiB[i,t]
-      ps[3,i,t,4] <- 1-phiB[i,t]               #probability of failed chick
+      ps[3,i,t,4] <- 1-phiB[i,t]            #probability of failed chick
       ps[4,i,t,1] <- 0                      #probability terminated goes to 'not entered'
-      ps[4,i,t,2] <- 0                       #probability terminated goes to egg (maybe happens)
-      ps[4,i,t,3] <- 0                       #probability terminated goes to chick
-      ps[4,i,t,4] <- 1                       #probability terminated goes to terminated
-  } #t
-
-   for (t in 1:visits_i[i]) {
+      ps[4,i,t,2] <- 0                      #probability terminated goes to egg (maybe happens)
+      ps[4,i,t,3] <- 0                      #probability terminated goes to chick
+      ps[4,i,t,4] <- 1                      #probability terminated goes to terminated
+    } #t
+    
+    for (t in 1:visits_i[i]) { #might need effort 
       # Define probabilities of O(t) given S(t)
       po[1,i,t,1] <- 0                        #'not entered' burrow is detected with a burrow visit
       po[1,i,t,2] <- 0                        #'not entered' burrow is detected with a prey visit
       po[1,i,t,3] <- 1                        #'not entered' burrow is not detected
-      po[2,i,t,1] <- pA[i,t]                    #egg burrow is detected with a burrow visit
+      po[2,i,t,1] <- pA[i,t]                  #egg burrow is detected with a burrow visit
       po[2,i,t,2] <- 0                        #egg burrow is detected with a prey visit
-      po[2,i,t,3] <- 1-pA[i,t]                  #egg burrow is not detected
-      po[3,i,t,1] <- b * pB[i,t]                #chick burrow is detected with a burrow visit 
-      po[3,i,t,2] <- (1 - b) * pB[i,t]          #chick burrow is detected with a prey visit
-      po[3,i,t,3] <- 1 - pB[i,t]                #chick burrow is not detected
+      po[2,i,t,3] <- 1-pA[i,t]                #egg burrow is not detected
+      po[3,i,t,1] <- b * pB[i,t]              #chick burrow is detected with a burrow visit 
+      po[3,i,t,2] <- (1 - b) * pB[i,t]        #chick burrow is detected with a prey visit
+      po[3,i,t,3] <- 1 - pB[i,t]              #chick burrow is not detected
       po[4,i,t,1] <- 0                        #terminated burrow is detected with a burrow visit
       po[4,i,t,2] <- 0                        #terminated burrow is detected with a prey visit
       po[4,i,t,3] <- 1                        #terminated burrow is not detected
-  } #t
- }#M
-
-#mean over study period
-for (i in 1:M) {
-  days.chick[i] <- sum(z[i,] == 3)
-  days.egg[i] <- sum(z[i,] == 2)
-  fledged_high[i] <- step(days.chick[i]-32) #if step() greater than zero, 1
-  fledged_low[i] <- step(days.chick[i]-45) #if step() greater than zero, 1
-  everActive[i] <- max(z[i,]>1) #number of active ever
- } #i
-
-#seasonal values
-#for (i in 1:M) {
+    } #t
+  }#M
+  
+  #mean over study period
+  for (i in 1:M) {
+    days.chick[i] <- sum(z[i,] == 3)
+    days.egg[i] <- sum(z[i,] == 2)
+    fledged_high[i] <- step(days.chick[i]-32) #if step() greater than zero, 1
+    fledged_low[i] <- step(days.chick[i]-45) #if step() greater than zero, 1
+    everActive[i] <- max(z[i,]>1) #number of active ever
+  } #i
+  
+  #seasonal values
+  #for (i in 1:M) {
   for (t in 2:n.occasions) {
-  chick[t] <- sum(z[1:M,t] == 3)
-  egg[t] <- sum(z[1:M,t] == 2)
-   } #t
- #} #i
-
-#means
-n.fledged.low <- sum(fledged_low[1:M])
-n.fledged.high <- sum(fledged_high[1:M])
-n.active.burrow <- sum(everActive[1:M])
-nest.succ.low <- n.fledged.low/n.active.burrow
-nest.succ.high <- n.fledged.high/n.active.burrow
-mean.days.chick <- mean(days.chick)
-mean.days.egg <- mean(days.egg)
+    chick[t] <- sum(z[1:M,t] == 3)
+    egg[t] <- sum(z[1:M,t] == 2)
+  } #t
+  #} #i
+  
+  #means
+  n.fledged.low <- sum(fledged_low[1:M])
+  n.fledged.high <- sum(fledged_high[1:M])
+  n.active.burrow <- sum(everActive[1:M])
+  nest.succ.low <- n.fledged.low/n.active.burrow
+  nest.succ.high <- n.fledged.high/n.active.burrow
+  mean.days.chick <- mean(days.chick)
+  mean.days.egg <- mean(days.egg)
+  Nstar <- sum(everActive[1:M])
 } #mod
 
 write.model(model_MEJS, "model_MEJS.txt")
 model.file = paste(getwd(),"model_MEJS.txt", sep="/")
+
 ```
 
+```{r model prob}
 
-```{r}
+model_MEJS <- function () {
+  
+  # Priors and constraints
+  for (i in 1:M) { 
+    for (t in 1:(n.occasions-1)){ 
+      logit(phiA[i,t]) <- mu.phiA[i,t]
+      logit(phiB[i,t]) <- mu.phiB[i,t] 
+      mu.phiA[i,t] <- b0.egg #+ b.egg.y[year_i[i]] 
+      mu.phiB[i,t] <- b0.ch #+ b.chick.y[year_i[i]] 
+      gamma[i,t] <- mean.gamma    # Prior for entry probabilities at occasion t
+      pA[i,t] <- mean.p[1]     # egg burrow detection
+      pB[i,t] <- mean.p[2]     # chick burrow detection, only need 1:14
+      psiAB[i,t] <- mean.psiAB  #egg to chick
+    } #t
+  } #i
+  
+  #b0.egg ~ dnorm(0, 0.1) #logit scale, same as implemented above
+  #b0.ch ~ dnorm(0, 0.1) #logit scale
+  mu.phi.egg ~ dbeta(1,1) #probability scale, could also be dunif(0,1)
+  b0.egg <- logit(mu.phi.egg) #back transform probability-scale prior to logit scale
+  mu.phi.ch ~ dbeta(1,1) #probability scale, could also be dunif(0,1)
+  b0.ch <- logit(mu.phi.ch)  #back transform probability-scale prior to logit scale
+  
+  b ~ dunif(0,1)            # prior for assignment probability
+  mean.psiAB ~ dunif(0,1)   # transition from egg to chick
+  mean.gamma ~ dunif(0,1)
+  pi ~ ddirch(alpha[1:3])   #dirichlet prior for multinomial
+  alpha[1] <- 1/3
+  alpha[2] <- 1/3
+  alpha[3] <- 1/3
+  
+  for (u in 1:2){
+    mean.p[u] ~ dunif(0, 1)      # mean state-spec. detection
+  }
+  
+  #params and priors for a fixed year effect on phi
+  # for (y in 2:nyear) {
+  #   b.chick.y[y] ~ dnorm(0, 0.001)
+  #   b.egg.y[y] ~ dnorm(0, 0.001)
+  # }
+  # b.chick.y[1] <- 0
+  # b.egg.y[1] <- 0
+  
+  # Likelihood 
+  for (i in 1:M){
+    # Define latent state at first occasion
+    z[i,1] ~ dcat(pi[1:3])      #all M individuals have probability of being in 1 of 3 states at first occ
+    # y[i,1] ~ dcat(po[z[i,1], i, 1, 1:3])  #covered below
+    
+    for (t in 2:n.occasions){
+      # State process: draw S(t) given S(t-1); daily
+      z[i,t] ~ dcat(ps[z[i,t-1], i, t-1, 1:4])
+    } #t
+    
+    # Observation process: draw O(t) given S(t); n_visit approach via Nathan
+    for (k in 1:visits_i[i]) {  
+      y[i,survey_day[i,k]] ~ dcat(po[z[i,survey_day[i,k]], i, k, 1:3]) 
+    } #k
+  } #i
+  
+  # Define transition and observation matrices
+  for (i in 1:M){
+    for (t in 1:(n.occasions-1)) {
+      # Define probabilities of state S(t+1) given S(t)   
+      ps[1,i,t,1] <- 1-gamma[i,t]              #probability of not entering
+      ps[1,i,t,2] <- gamma[i,t]                #probability of entering as egg
+      ps[1,i,t,3] <- 0                         #can't enter as a chick after day 1
+      ps[1,i,t,4] <- 0                         #probability of entering as terminated
+      ps[2,i,t,1] <- 0                         #probability egg goes to 'not entered'
+      ps[2,i,t,2] <- (1-psiAB[i,t])*phiA[i,t]  #probability of surviving egg state and not transitioning
+      ps[2,i,t,3] <- phiA[i,t]*psiAB[i,t]          #probability of surviving egg state and hatching
+      ps[2,i,t,4] <- 1-phiA[i,t]                   #probability of a failed egg
+      ps[3,i,t,1] <- 0                             #probability chick goes to 'not entered'
+      ps[3,i,t,2] <- 0                             #probability chick goes to egg
+      ps[3,i,t,3] <- phiB[i,t]
+      ps[3,i,t,4] <- 1-phiB[i,t]            #probability of failed chick
+      ps[4,i,t,1] <- 0                      #probability terminated goes to 'not entered'
+      ps[4,i,t,2] <- 0                      #probability terminated goes to egg (maybe happens)
+      ps[4,i,t,3] <- 0                      #probability terminated goes to chick
+      ps[4,i,t,4] <- 1                      #probability terminated goes to terminated
+    } #t
+    
+    for (t in 1:visits_i[i]) { #might need effort 
+      # Define probabilities of O(t) given S(t)
+      po[1,i,t,1] <- 0                        #'not entered' burrow is detected with a burrow visit
+      po[1,i,t,2] <- 0                        #'not entered' burrow is detected with a prey visit
+      po[1,i,t,3] <- 1                        #'not entered' burrow is not detected
+      po[2,i,t,1] <- pA[i,t]                  #egg burrow is detected with a burrow visit
+      po[2,i,t,2] <- 0                        #egg burrow is detected with a prey visit
+      po[2,i,t,3] <- 1-pA[i,t]                #egg burrow is not detected
+      po[3,i,t,1] <- b * pB[i,t]              #chick burrow is detected with a burrow visit 
+      po[3,i,t,2] <- (1 - b) * pB[i,t]        #chick burrow is detected with a prey visit
+      po[3,i,t,3] <- 1 - pB[i,t]              #chick burrow is not detected
+      po[4,i,t,1] <- 0                        #terminated burrow is detected with a burrow visit
+      po[4,i,t,2] <- 0                        #terminated burrow is detected with a prey visit
+      po[4,i,t,3] <- 1                        #terminated burrow is not detected
+    } #t
+  }#M
+  
+  #mean over study period
+  for (i in 1:M) {
+    days.chick[i] <- sum(z[i,] == 3)
+    days.egg[i] <- sum(z[i,] == 2)
+    fledged_high[i] <- step(days.chick[i]-32) #if step() greater than zero, 1
+    fledged_low[i] <- step(days.chick[i]-45) #if step() greater than zero, 1
+    everActive[i] <- max(z[i,]>1) #number of active ever
+  } #i
+  
+  #seasonal values
+  #for (i in 1:M) {
+  for (t in 2:n.occasions) {
+    chick[t] <- sum(z[1:M,t] == 3)
+    egg[t] <- sum(z[1:M,t] == 2)
+  } #t
+  #} #i
+  
+  #means
+  n.fledged.low <- sum(fledged_low[1:M])
+  n.fledged.high <- sum(fledged_high[1:M])
+  n.active.burrow <- sum(everActive[1:M])
+  nest.succ.low <- n.fledged.low/n.active.burrow
+  nest.succ.high <- n.fledged.high/n.active.burrow
+  mean.days.chick <- mean(days.chick)
+  mean.days.egg <- mean(days.egg)
+  Nstar <- sum(everActive[1:M])
+} #mod
+
+write.model(model_MEJS, "model_MEJS.txt")
+model.file = paste(getwd(),"model_MEJS.txt", sep="/")
+
+```
+
+```{r simulation}
+
+######### Data Simulation
 
 # Function to simulate capture-recapture data under a multi-event JS model;
-# adapted with Nathan's help from Kery & Schaub
-n.occasions <- 98            # Number of capture occasions
-Nstar <- 150     # Superpopulation size (total number of burrows active on at least one day)
+# adapted with Nathan's help and Kery & Schaub example; simplified with Sarah's help
+n.occasions <- 98            # Number of occasions
+Nstar <- 130     # Superpopulation size (total number of burrows active on at least one day)
+M <- 150 
 n.states <- 4         # not entered, egg, chick, terminated
 n.obs <- 3            # burrow visit, prey delivery, not detected
-phiA <- 0.99          # survival state A (egg)
-phiB <- 0.98          # survival state B (chick)
-psiAB <- 0.025        # transition egg to chick conditional on survival
-pA <- 0.9             # detection for egg 
-pB <- 0.9             # detection for chick 
-b <- 0.2              # conditional on observing true state chick, probability obs was bv
-gamma <- c(seq(0.6, 0.05, length = 25), 
-           rep(0, n.occasions-26))   # Entry prob decreases with time, minus 1st occ
+phiA <- 0.98          # survival state A (egg)
+phiB <- 0.97          # survival state B (chick)
+psiAB <- 0.05        # transition egg to chick conditional on survival
+pA <- 0.7             # detection for egg 
+pB <- 0.7             # detection for chick 
+b <- 0.2              # conditional on true state == chick, probability obs was burrow visit
+gamma <- rep(0.02, n.occasions) 
 
-
-#Define matrics
-
-#state at entry
-# ent.st <- matrix(NA, nrow = n.occasions+1, ncol = n.states)
-#  for(t in 1:nrow(ent.st)){
-#   ent.st[t,]<- c(0.33, 0.33, 0.33, 0) #multinomial probability of entering into 1-3 states
-#  }
-ent.st <- c(0, 0.8, 0.2, 0) #highest prob of being an egg at entry occasion, could also be chick
-
+#Define matrices
 #state process conidtional on entry (survival and transition)
-st.proc <- array(NA, dim = c(n.states, n.states, Nstar, n.occasions))
-for (i in 1:Nstar){
-   for (t in 1:n.occasions){
-      st.proc[,,i,t] <- matrix(c(
-      (1-gamma[t]), gamma[t], 0, 0,   #help, what should this be if nest already entered at occasion 1?
+st.proc <- array(NA, dim = c(n.states, n.states, M, n.occasions))
+for (i in 1:M){
+  for (t in 1:n.occasions){
+    st.proc[,,i,t] <- matrix(c(
+      (1-gamma[t]), gamma[t], 0, 0,   
       0, phiA*(1-psiAB), phiA*psiAB, 1-phiA,  #egg survival/transition
-      0, 0, phiB, 1-phiB,              #chick survival
-      0, 0, 0, 1),                   #terminated
+      0, 0, phiB, 1-phiB,                     #chick survival
+      0, 0, 0, 1),                            #terminated
       nrow = n.states, byrow = TRUE)
-      } #t
-   } #i
+  } #t
+} #i
 
 #Observation process
-obs.proc <- array(NA, dim=c(n.states, n.obs, Nstar, n.occasions))
-for (i in 1:Nstar){
-   for (t in 1:n.occasions){
-      obs.proc[,,i,t] <- matrix(c(
+obs.proc <- array(NA, dim=c(n.states, n.obs, M, n.occasions))
+effort <- c(rep(0, n.occasions))
+effort[seq(1,98,7)] <- 1
+
+for (i in 1:M){
+  for (t in 1:n.occasions){
+    obs.proc[,,i,t] <- matrix(c(
       0,  0,  1,                   #not detected if not entered
-      pA, 0,  1-pA,                #detection if egg burrow
-      pB*b,  pB*(1-b), 1-pB, #detection if chick burrow
+      pA*effort[t], 0,  1-(pA*effort[t]),                            #detection if egg burrow
+      effort[t]*pB*b,  (effort[t]*pB)*(1-b), 1-(pB*effort[t]),       #detection if chick burrow
       0,  0,  1),                  #detection if terminated
       nrow = n.states, byrow = TRUE)
-      } #t
-   } #i
+  } #t
+} #i
 
 # Function to simulate capture-recapture data under the JS model
-sim.mejs <- function(st.proc, obs.proc, Nstar, n.occasions, n.obs, n.states){
-
-   z <- ch <- matrix(0, ncol = n.occasions, nrow = Nstar)  
-   B <- rmultinom(1, Nstar, gamma) #total number of entering burrows per occasion
-   ent.occ <- numeric()
-   for (t in 1:(n.occasions-1)){
-      ent.occ <- c(ent.occ, rep(t, B[t])) #entry day/occasion for each burrow
-   }
-
-   #survival, transition, and detection
-   for (i in 1:Nstar){
+sim.mejs <- function(st.proc, obs.proc, M, n.occasions, n.obs, n.states){
+  
+  z <- ch <- matrix(0, ncol = n.occasions, nrow = M)  
+  # B <- rmultinom(1, Nstar, gamma) #total number of entering burrows per occasion
+  # ent.occ <- numeric()
+  # for (t in 1:(n.occasions-1)){
+  #   ent.occ <- c(ent.occ, rep(t, B[t])) #entry day/occasion for each burrow
+  # }
+  
+  #survival, transition, and detection
+  for (i in 1:M){
     #prior to entry
-    z[i,1:(ent.occ[i]-1)] <- 1 #not entered until entry occasion
-    ch[i,1:(ent.occ[i]-1)] <- n.obs #not detected prior to capture
-
-    #at entry occasion 
-    for (t in ent.occ[i]){ #when t matches entry day for i
-     z[i,t] <-  which(rmultinom(1, 1, ent.st)==1) #state at entry occasion, either 2 or 3
-     event <- which(rmultinom(1, 1, obs.proc[z[i,t],,i,t])==1) #obs given state; [states, obs, N, t)
-     ch[i,t] <- event
-     ch[10,]
-    } #t
-
-    #after entry occasion
-    if(ent.occ[i]<(n.occasions)){ #survival process if entered prior to end of study
-      for (t in ent.occ[i]:(n.occasions-1)){
-      z[i,t+1] <- which(rmultinom(1, 1, st.proc[z[i,t],,i,t])==1)   #state
-      event <- which(rmultinom(1, 1, obs.proc[z[i,t],,i,t])==1)     #obs given state
-      ch[i,t+1] <- event
-     }#t
-    }#if
+    z[i,1] <- 1
+    ch[i,1] <- n.obs
     
-    #forced exit: should instead be forced to state 4 after X number of days either in state 2 or state 3
-    z[i,c((n.occasions-15):n.occasions)] <- 4
-    ch[i,c((n.occasions-15):n.occasions)] <- 3
+    for (t in 2:n.occasions) {
+      z[i,t] <- which(rmultinom(1, 1, st.proc[z[i,t-1],,i,t-1])==1)   #state
+      event <- which(rmultinom(1, 1, obs.proc[z[i,t],,i,t])==1)     #obs given state
+      ch[i,t] <- event
+    }
   }#i
-   
-   # Remove individuals never captured
-   captured <- apply(ch, 1, min) < n.obs
-   chOBS <- ch[captured,]
-   alive <- z
-    alive[z==1|z==4] <- 0
-    alive[z==2|z==3] <- 1
-   Nt <- colSums(alive)    # Actual population size at time t
-   Negg <- Nchick <- NA
-   #for(t in 1:(n.occasions+1)){
-   for(t in 1:(n.occasions)){
+  
+  alive <- z
+  alive[z==1|z==4] <- 0
+  alive[z==2|z==3] <- 1
+  Nt <- colSums(alive)    # Actual population size at time t
+  Negg <- Nchick <- NA
+  #for(t in 1:(n.occasions+1)){
+  for(t in 1:(n.occasions)){
     Negg[t] <- length(which(z[,t]==2))
     Nchick[t] <- length(which(z[,t]==3))
-   }
-   return(list(CH = chOBS, B = B, N = Nt, Negg = Negg, Nchick = Nchick, z = z))
+  }
+  return(list(CH = ch, N = Nt, Negg = Negg, Nchick = Nchick, z = z, alive = alive))
+  
 } #function
 
-# Execute simulation function
-sim <- sim.mejs(st.proc, obs.proc, Nstar, n.occasions, n.obs, n.states)
+####### Execute simulation function
+sim <- sim.mejs(st.proc, obs.proc, M, n.occasions, n.obs, n.states)
 CH <- sim$CH
-z <- sim$z
+z.true <- sim$z
+alive <- sim$alive
+Nstar <- sum(apply(alive, 1, max)) #Nstar is a random variable - changes each time
+cbind(z.true[10,], CH[10,], effort) #make sure states and obs match up with effort
 
 #verify
 # sim$N
 # sim$B
 # sum(sim$B) #should equal simulated value of Nstar
 
-# Augment data
-nz <- (Nstar - dim(CH)[1]) + 0.2*Nstar #get back up to Nstar (capture < Nstar dep on params) + 20%
-CH.aug <- rbind(CH, matrix(n.obs, nrow = nz, ncol = dim(CH)[2])) 
-ch <- CH.aug
-M <- dim(ch)[1]
 
-visits_i <- rep(98/7, M) #number of visits for each nest
+visits_i <- rep(sum(effort), M) #number of visits for each nest
 
 #survey days for time-between
-effort <- matrix(NA, nrow = M, ncol = max(visits_i))
+survey_day <- matrix(NA, nrow = M, ncol = max(visits_i))
 for (i in 1:M){
-  #for (t in 1:n.occasions) {
-    effort[i,] <- 7*(1:max(visits_i)) #even sampling 7 days apart same at all nests
-  #}
+  survey_day[i,] <- which(effort==1) #even sampling 7 days apart same at all nests
 }
 
 get.first <- function(x) min(which(x < n.obs)) #first time that there is a non-3
@@ -290,72 +389,252 @@ f <- apply(CH, 1, get.first)
 get.last <- function(x) max(which(x < n.obs))  #last time there is a non-3
 l <- apply(CH, 1, get.last)
 
-#inits for state process z[i,t]
-js.me.init <- function(ch, f, l, nz){
-  inits <- matrix(NA, nr = dim(ch)[1], nc = dim(ch)[2])
-  #inits[,1] <- NA  #deterministic on occasion 1
+########## Inits and latent z state
 
-  for(i in 1:dim(ch)[1]) { 
-    inits[i,1:f[i]-1] <- 1  #1 before first capture 
-    if(l[i]<dim(ch)[2]){
-     inits[i, (l[i]+1):dim(ch)[2]] <- rep(3, (dim(ch)[2]-l[i])) #3 from last obs to end
-    }
-    if(sum(ch[i,] == 2, na.rm=T)>0){ #sites with observed prey delivery
-       if(f[i]==min(which(ch[i,]  == 2))){  #if first obs is a prey delivery
-        inits[i, f[i]:l[i]]<-3              #chick until end of study 
-        if(f[i]>2) inits[i, 2:(f[i]-1)] <- 2  #egg prior to chick
+#only know z for certain when ch == 2 (prey visit), so z.init == NA and z.st == 3 in those instances
+#z.inits
+z.init <- matrix(NA, nrow = M, ncol = dim(CH)[2])
+z.init <- CH
 
-       }else{
-        inits[i, f[i]:(min(which(ch[i,]  == 2))-1)] <- 2
-        inits[i, min(which(ch[i,]  == 2)):l[i]] <- 3
-       }
-    }else{ #never detected a prey delivery
-      if(sum(ch[i,] == 2, na.rm=T)==0){      
-        inits[i, f[i]:(max(which(ch[i,] == 1)))] <- 2
-      }
-    }
-    inits[i,c((n.occasions-15):n.occasions)] <- 4 #kicked out
-   }#i
-  return(inits)
+for(i in 1:M) { 
+  if(sum(z.init[i,] == 2, na.rm = T) > 0){ #sites with at least one observed prey delivery
+    z.init[i,1:(f[i]-1)] <- 1
+    z.init[i,(min(which(CH[i,] == 2)):n.occasions)] <- 3 #3 from first to last pv, and then to the end are 3 anyways
+    z.init[i, 1:(min(which(CH[i,] == 2))-1)] <- 2 #unknown everywhere else, initialize with egg
+  } else {
+    z.init[i, 1:n.occasions] <- 2
+  } #else
+} #i
+
+#known latent state z
+z.st <- matrix(NA, nrow = M, ncol = dim(CH)[2])
+z.st <- CH #start off with observations; 1 = bv, 2 = pv, 3 = nd
+
+for(i in 1:M) { 
+  if(sum(z.st[i,] == 2, na.rm = T) > 0){ #sites with at least one observed prey delivery
+    z.st[i,(min(which(CH[i,] == 2)):max(which(CH[i,] == 2)))] <- 3 #3 from first to last pv, and then to the end are 3 anyways
+    z.st[i, 1:(min(which(CH[i,] == 2))-1)] <- NA #unknown up to first pv
+    if (l[i] == n.occasions) {
+      z.st[i, ((max(which(CH[i,] == 2))):n.occasions)] <- 3 #leave alone if obs prey until end
+    } else {
+      z.st[i, ((max(which(CH[i,] == 2))+1):n.occasions)] <- NA #otherwise, unknown after last pv
+    } #l[i]
+  } else { #never seen
+    z.st[i, 1:n.occasions] <- NA
+  }
 }
 
-zInitsObs <- js.me.init(CH, f, l, nz)
-z.init <- rbind(zInitsObs,matrix(1, nr = nz, nc = dim(CH)[2])) #add augmented
-
+#now need z.init to be NA everywhere where z.st is not NA
+z.init[which(!is.na(z.st))] <- NA
 
 ```
 
-```{r}
+
+```{r model run}
    
 # Bundle data
-jags.data <- list(y = ch, n.occasions = n.occasions, 
-                  #nyear = length(unique(year_i)),
-                  #z =z,
-                  effort = effort, #from setup, survey_days
+jags.data <- list(y = CH, n.occasions = n.occasions, 
+                  z = z.st,
+                  survey_day = survey_day, 
                   visits_i = visits_i, 
-                  M = dim(ch)[1])
+                  M = M)
 
 inits <- function(){list(#mean.phi = runif(2, 0, 1), 
-                         #mean.p = runif(2, 0.3, 1),
-                         z = z.init)}  
+  #mean.p = runif(2, 0.3, 1),
+  z = z.init)}  
 
 # Parameters monitored
-parameters <- c('phiA.int', 'phiB.int', "mean.p", "b", 
-                'n.active.burrow', 'n.fledged.low', 'n.fledged.high', 'mean.days.chick', 'mean.days.egg',
-                #"gamma", 'z', 'fledged', 'chick', 'egg', "N.egg", "N.chick", 
-                'b.egg.y', 'b.chick.y',
-                "mean.psiAB", 'mu.phi',
+parameters <- c("mean.p", "b", 
+                'mu.phi.egg', 'mu.phi.ch', 'phiA.int', 'phiB.int', 
+                'n.active.burrow', 'n.fledged.low', 'n.fledged.high', 
+                'mean.days.chick', 'mean.days.egg', 'mean.gamma',
+                "mean.psiAB",
                 'nest.succ.low', 'nest.succ.high', 
-                "N.active", "Nstar", "psi")
-     
-# MCMC settings
-ni <- 3; nt <- 1; nb <- 1; nc <- 1
-     
-out_sim <- jags(jags.data, inits, parameters, model.file = model.file,
-              n.chains = nc, n.thin = nt, n.iter = ni, n.burnin = nb, parallel = T)
+                # "N.active", 'Nstar',
+                "mu.phi")
 
-#out <- readRDS('out4d.rds')
+# MCMC settings
+ni <- 15000; nt <- 1; nb <- 8000; nc <- 4
+ni <- 3; nt <- 1; nb <- 1; nc <- 2
+
+out_sim <- jagsUI::jags(jags.data, inits, parameters, model.file = model.file,
+                n.chains = nc, n.thin = nt, n.iter = ni, n.burnin = nb, parallel = T)
+
+# out1 <- readRDS('out2aa.rds') #p = 0.8, phi = 0.96/0.98, psi = 0.025
+# out2 <- readRDS('out2a.rds') #p = 0.85, phi = 0.99/0.97, psi = 0.025
+# out3 <- readRDS('out2e.rds') #p = 0.7, phi = 0.97, psi = 0.02
+
+# out_best <- readRDS('out2f.rds')
+
+# out4 <- readRDS('out7c.rds') #p = 0.7, phi = 0.94, psi = 0.025
+# out5 <- readRDS('out7d.rds') #p = 0.8, phi = 0.95, psi = 0.023
+
 
 ```
 
+
+
+
+```{r old sim}
+
+#the old thing
+# Function to simulate capture-recapture data under a multi-event JS model;
+# adapted with Nathan's help and Kery & Schaub example
+# n.occasions <- 98            # Number of occasions
+# Nstar <- 150     # Superpopulation size (total number of burrows active on at least one day)
+# n.states <- 4         # not entered, egg, chick, terminated
+# n.obs <- 3            # burrow visit, prey delivery, not detected
+# phiA <- 0.99          # survival state A (egg)
+# phiB <- 0.98          # survival state B (chick)
+# psiAB <- 0.025        # transition egg to chick conditional on survival
+# pA <- 0.9             # detection for egg 
+# pB <- 0.9             # detection for chick 
+# b <- 0.2              # conditional on true state == chick, probability obs was burrow visit
+# gamma <- c(seq(0.6, 0.05, length = 25), 
+#            rep(0, n.occasions-26))   # Entry prob decreases with time, minus 1st occ
+# 
+# #ent.st <- c(0, 0.8, 0.2, 0) #highest prob of being an egg at entry occasion, could also be chick
+# ent.st <- c(0, rep(0.5,2), 0) #equal probs of being in any of two states
+# 
+# #state process conidtional on entry (survival and transition)
+# st.proc <- array(NA, dim = c(n.states, n.states, Nstar, n.occasions))
+# for (i in 1:Nstar){
+#    for (t in 1:n.occasions){
+#       st.proc[,,i,t] <- matrix(c(
+#       (1-gamma[t]), gamma[t], 0, 0,   #help
+#       0, phiA*(1-psiAB), phiA*psiAB, 1-phiA,  #egg survival/transition
+#       0, 0, phiB, 1-phiB,              #chick survival
+#       0, 0, 0, 1),                   #terminated
+#       nrow = n.states, byrow = TRUE)
+#       } #t
+#    } #i
+# 
+# #Observation process
+# obs.proc <- array(NA, dim=c(n.states, n.obs, Nstar, n.occasions))
+# for (i in 1:Nstar){
+#    for (t in 1:n.occasions){
+#       obs.proc[,,i,t] <- matrix(c(
+#       0,  0,  1,                   #not detected if not entered
+#       pA, 0,  1-pA,                #detection if egg burrow
+#       pB*b,  pB*(1-b), 1-pB, #detection if chick burrow
+#       0,  0,  1),                  #detection if terminated
+#       nrow = n.states, byrow = TRUE)
+#       } #t
+#    } #i
+# 
+# # Function to simulate capture-recapture data under the JS model
+# sim.mejs <- function(st.proc, obs.proc, Nstar, n.occasions, n.obs, n.states){
+# 
+#    z <- ch <- matrix(0, ncol = n.occasions, nrow = Nstar)  
+#    B <- rmultinom(1, Nstar, gamma) #total number of entering burrows per occasion
+#    ent.occ <- numeric()
+#    for (t in 1:(n.occasions-1)){
+#       ent.occ <- c(ent.occ, rep(t, B[t])) #entry day/occasion for each burrow
+#    }
+# 
+#    #survival, transition, and detection
+#    for (i in 1:Nstar){
+#     #prior to entry
+#      if (ent.occ[i] > 1) {
+#     z[i,1:(ent.occ[i]-1)] <- 1 #not entered until entry occasion; written over below if ent.occ[i] == 1
+#     ch[i,1:(ent.occ[i]-1)] <- n.obs #not detected prior to capture
+#      }
+# 
+#     #at entry occasion 
+#     for (t in ent.occ[i]){ #when t matches entry day for i
+#      z[i,t] <-  which(rmultinom(1, 1, ent.st)==1) #state at entry occasion, either 2 or 3
+#      event <- which(rmultinom(1, 1, obs.proc[z[i,t],,i,t])==1) #obs given state; [states, obs, N, t)
+#      ch[i,t] <- event
+#     } #t
+# 
+#     #after entry occasion
+#     if(ent.occ[i]<(n.occasions)){ #survival process if entered prior to end of study
+#       for (t in ent.occ[i]:(n.occasions-1)){
+#       z[i,t+1] <- which(rmultinom(1, 1, st.proc[z[i,t],,i,t])==1)   #state
+#       event <- which(rmultinom(1, 1, obs.proc[z[i,t],,i,t])==1)     #obs given state
+#       ch[i,t+1] <- event
+#      }#t
+#     }#if
+#     
+#     #forced exit: should instead be forced to state 4 after X number of days either in state 2 or state 3
+#     z[i,c((n.occasions-15):n.occasions)] <- 4
+#     ch[i,c((n.occasions-15):n.occasions)] <- 3
+#   }#i
+#    
+#    # Remove individuals never captured
+#    captured <- apply(ch, 1, min) < n.obs
+#    chOBS <- ch[captured,]
+#    alive <- z
+#     alive[z==1|z==4] <- 0
+#     alive[z==2|z==3] <- 1
+#    Nt <- colSums(alive)    # Actual population size at time t
+#    Negg <- Nchick <- NA
+#    #for(t in 1:(n.occasions+1)){
+#    for(t in 1:(n.occasions)){
+#     Negg[t] <- length(which(z[,t]==2))
+#     Nchick[t] <- length(which(z[,t]==3))
+#    }
+#    return(list(CH = chOBS, B = B, N = Nt, Negg = Negg, Nchick = Nchick, z = z))
+# } #function
+# 
+# # Execute simulation function
+# sim <- sim.mejs(st.proc, obs.proc, Nstar, n.occasions, n.obs, n.states)
+# CH <- sim$CH
+# z <- sim$z
+# 
+# # Augment data
+# nz <- (Nstar - dim(CH)[1]) + 0.2*Nstar #get back up to Nstar (capture < Nstar dep on params) + 20%
+# CH.aug <- rbind(CH, matrix(n.obs, nrow = nz, ncol = dim(CH)[2])) 
+# ch <- CH.aug
+# M <- dim(ch)[1]
+# 
+# visits_i <- rep(98/7, M) #number of visits for each nest
+# 
+# #survey days for time-between
+# effort <- matrix(NA, nrow = M, ncol = max(visits_i))
+# for (i in 1:M){
+#   #for (t in 1:n.occasions) {
+#     effort[i,] <- 7*(1:max(visits_i)) #even sampling 7 days apart same at all nests
+#   #}
+# }
+# 
+# get.first <- function(x) min(which(x < n.obs)) #first time that there is a non-3
+# f <- apply(CH, 1, get.first)
+# get.last <- function(x) max(which(x < n.obs))  #last time there is a non-3
+# l <- apply(CH, 1, get.last)
+# 
+# #inits for state process z[i,t]
+# js.me.init <- function(ch, f, l, nz){
+#   inits <- matrix(NA, nr = dim(ch)[1], nc = dim(ch)[2])
+#   #inits[,1] <- NA  #deterministic on occasion 1
+# 
+#   for(i in 1:dim(ch)[1]) { 
+#     inits[i,1:f[i]-1] <- 1  #1 before first capture 
+#     if(l[i]<dim(ch)[2]){
+#      inits[i, (l[i]+1):dim(ch)[2]] <- rep(3, (dim(ch)[2]-l[i])) #3 from last obs to end
+#     }
+#     if(sum(ch[i,] == 2, na.rm=T)>0){ #sites with observed prey delivery
+#        if(f[i]==min(which(ch[i,]  == 2))){  #if first obs is a prey delivery
+#         inits[i, f[i]:l[i]]<-3              #chick until end of study 
+#         if(f[i]>2) inits[i, 2:(f[i]-1)] <- 2  #egg prior to chick
+# 
+#        }else{
+#         inits[i, f[i]:(min(which(ch[i,]  == 2))-1)] <- 2
+#         inits[i, min(which(ch[i,]  == 2)):l[i]] <- 3
+#        }
+#     }else{ #never detected a prey delivery
+#       if(sum(ch[i,] == 2, na.rm=T)==0){      
+#         inits[i, f[i]:(max(which(ch[i,] == 1)))] <- 2
+#       }
+#     }
+#     inits[i,c((n.occasions-15):n.occasions)] <- 4 #kicked out
+#    }#i
+#   return(inits)
+# }
+# 
+# zInitsObs <- js.me.init(CH, f, l, nz)
+# z.init <- rbind(zInitsObs,matrix(1, nr = nz, nc = dim(CH)[2])) #add augmented
+
+
+```
 
